# woodpecker

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  COPYING.header  Doxyfile  README.md
cmake/: .gitignore
src/woodpecker/: CMakeLists.txt  config.in.hpp  id.cpp  id.hpp  joint.cpp  joint.hpp  mesh.cpp  mesh.hpp  mesh.test.cpp  part.cpp  part.hpp  pga.cpp  pga.hpp  scene.cpp  scene.hpp  scene_editor.cpp  scene_editor.hpp
src/woodpecker/util/: assert.hpp  cast.hpp  uuid.cpp  uuid.hpp
src/woodpecker_app/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp  main.cpp  main.qrc  main_window.cpp  main_window.hpp  matcap_material.cpp  matcap_material.hpp  mesh_renderer.cpp  mesh_renderer.hpp  part_entity.cpp  part_entity.hpp  part_material.cpp  part_material.hpp
src/woodpecker_app/shader/: matcap.frag.glsl  matcap.vert.glsl  part.frag.glsl  part.vert.glsl
src/woodpecker_app/util/: flags.hpp  qt.cpp  qt.hpp
tools/: make-grid.go
